--- a/contrib/gitian-descriptors/gitian-osx-signer.yml
+++ b/contrib/gitian-descriptors/gitian-osx-signer.yml
@@ -1,5 +1,5 @@
 ---
-name: "bitcoin-dmg-signer"
+name: "bitcoinx-dmg-signer"
 suites:
 - "trusty"
 architectures:
@@ -7,10 +7,11 @@ architectures:
 packages:
 - "faketime"
 remotes:
+#- "url": "https://github.com/bitcoinx-project/bitcoin-detached-sigs.git"
 - "url": "https://github.com/bitcoin-core/bitcoin-detached-sigs.git"
   "dir": "signature"
 files:
-- "bitcoin-osx-unsigned.tar.gz"
+- "bitcoinx-osx-unsigned.tar.gz"
 script: |
   WRAP_DIR=$HOME/wrapped
   mkdir -p ${WRAP_DIR}
@@ -27,8 +28,8 @@ script: |
     chmod +x ${WRAP_DIR}/${prog}
   done
 
-  UNSIGNED=bitcoin-osx-unsigned.tar.gz
-  SIGNED=bitcoin-osx-signed.dmg
+  UNSIGNED=bitcoinx-osx-unsigned.tar.gz
+  SIGNED=bitcoinx-osx-signed.dmg
 
   tar -xf ${UNSIGNED}
   OSX_VOLNAME="$(cat osx_volname)"
