Fix Travis CI's partial error

--- a/src/Makefile.cryptopp.include
+++ b/src/Makefile.cryptopp.include
@@ -62,83 +62,155 @@ cryptopp_libcryptopp_a_SOURCES += cryptopp/strciphr.cpp
 cryptopp_libcryptopp_a_SOURCES += cryptopp/winpipes.cpp
 cryptopp_libcryptopp_a_SOURCES += cryptopp/sha3.cpp
 
-cryptopp_libcryptopp_a_SOURCES += cryptopp/cryptlib.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/cpu.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/integer.h
-
+cryptopp_libcryptopp_a_SOURCES += cryptopp/3way.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/adler32.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/aes.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/algebra.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/algparam.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/arc4.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/argnames.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/asn.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/authenc.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/base32.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/base64.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/basecode.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/dsa.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/bench.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/blake2.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/blowfish.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/blumshub.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/camellia.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/cast.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/cbcmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/ccm.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/chacha.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/channels.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/cmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/config.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/cpu.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/crc.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/cryptlib.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/default.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/des.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/dh.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/dh2.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/dll.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/dmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/drbg.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/dsa.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/eax.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/ec2n.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/eccrypto.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/ecp.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/ecpoint.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/elgamal.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/emsa2.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/eprecomp.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/esign.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/factory.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/fhmqv.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/files.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/filters.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/fips140.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/fltrimpl.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/gcm.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/gf256.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/gf2_32.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/gf2n.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/gfpcrypt.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/gost.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/gzip.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/hex.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/hkdf.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/hmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/hmqv.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/hrtimer.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/ida.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/idea.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/integer.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/iterhash.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/keccak.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/misc.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/modes.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/mqueue.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/nbtheory.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/oaep.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/osrng.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/polynomi.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/pubkey.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/queue.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/randpool.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/rijndael.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/rng.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/sha.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/strciphr.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/winpipes.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/sha3.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/aes.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/factory.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/config.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/dmac.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/drbg.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/esign.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/fhmqv.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/hkdf.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/hmqv.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/lubyrack.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/luc.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/mars.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/md2.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/md4.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/md5.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/mdc.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/mersenne.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/misc.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/modarith.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/modes.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/modexppc.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/nr.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/pwdbased.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/secblock.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/siphash.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/trunhash.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/validate.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/words.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/seckey.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/stdcpp.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/trap.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/smartptr.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/simple.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/argnames.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/dh.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/mqueue.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/mqv.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/ecpoint.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/fltrimpl.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/nbtheory.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/network.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/nr.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/oaep.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/oids.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/osrng.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/ossig.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/panama.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/pch.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/cbcmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/pkcspad.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/poly1305.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/polynomi.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/pssr.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/pubkey.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/pwdbased.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/queue.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rabin.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/randpool.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rc2.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rc5.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rc6.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rdrand.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/resource.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rijndael.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/ripemd.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rng.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rsa.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/rw.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/safer.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/salsa.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/seal.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/secblock.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/seckey.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/seed.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/serpent.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/serpentp.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/sha.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/sha3.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/shacal2.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/shark.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/simple.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/siphash.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/skipjack.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/smartptr.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/socketft.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/sosemanuk.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/square.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/stdcpp.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/strciphr.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/tea.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/tiger.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/trap.h
 cryptopp_libcryptopp_a_SOURCES += cryptopp/trdlocal.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/ccm.h
-cryptopp_libcryptopp_a_SOURCES += cryptopp/*.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/trunhash.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/ttmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/twofish.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/validate.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/vmac.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/wait.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/wake.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/whrlpool.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/winpipes.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/words.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/xtr.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/xtrcrypt.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/zdeflate.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/zinflate.h
+cryptopp_libcryptopp_a_SOURCES += cryptopp/zlib.h
 
 if TARGET_WINDOWS
 else
